@@ -9,6 +9,8 @@ ikiwiki (3.20120204) UNRELEASED; urgency=low
     changed pages.
   * Added a "changes" hook. Renamed the "change" hook to "rendered", but
     the old hook name is called for now for back-compat.
+  * meta: Support keywords header. Closes: #664780
+    Thanks, Martin Michlmayr
 
  -- Joey Hess <joeyh@debian.org>  Wed, 21 Mar 2012 14:33:14 -0400
 
